fix z-index

--- a/src/style/my.scss
+++ b/src/style/my.scss
@@ -913,6 +913,7 @@ footer {
     align-items: center;
     justify-content: flex-end; 
     margin: 35px 0 0;
+    z-index: 1;
 
     button {
         position: relative;
